err/bibliograph.core.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bibliograph'...
Listing './lib/python3.5/site-packages/bibliograph/core'...
Compiling './lib/python3.5/site-packages/bibliograph/core/bibutils.py'...
***   File "./lib/python3.5/site-packages/bibliograph/core/bibutils.py", line 73
    raise ValueError, "No transformation from '%s' to '%s' found." \
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bibliograph/core/utils.py'...
***   File "./lib/python3.5/site-packages/bibliograph/core/utils.py", line 59
    ur""" Try to encode a string

        >>> from bibliograph.core.utils import _encode

        ASCII is ASCII is ASCII ...
        >>> _encode(u'ascii', 'utf-8')
        'ascii'

        This is normal
        >>> _encode(u'öl', 'utf-8')
        '\xc3\xb6l'

        Don't fail on this ...
        >>> _encode('öl', 'utf-8')
        '\xc3\xb6l'

        Don't fail on this also
        >>> _encode(None, 'utf-8')
        ''

        Still throw an exception on unknown encodings
        >>> _encode(u'öl', 'bogus')
        Traceback (most recent call last):
        ...
        LookupError: unknown encoding: bogus

    """
                                

                                                      

                                   
                                      
               

                      
                                   
                   

                              
                                  
                   

                               
                                  
          

                                                     
                                   
                                          
           
                                            

      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bibliograph.core-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
